[gd_scene load_steps=2 format=3 uid="uid://cq0wul4o0ib2j"]

[ext_resource type="Script" uid="uid://7gosopkdugq" path="res://scripts/menu.gd" id="1_yqeox"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -469.0
offset_top = -312.0
offset_right = -429.0
offset_bottom = -272.0
script = ExtResource("1_yqeox")

[node name="ReducedVisibilityButton" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -21.5
offset_right = 118.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/button_checked_color = Color(0, 0.7019608, 0, 1)
text = "Reduced Visibility Graph"

[node name="RestartButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 668.0
offset_top = -22.0
offset_right = 890.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart simulation"

[node name="RobotRadiusSlider" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 127.0
offset_top = 2.0
offset_right = 236.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
min_value = 1.0
max_value = 30.0
value = 1.0

[node name="Label" type="Label" parent="RobotRadiusSlider"]
layout_mode = 0
offset_top = -23.0
offset_right = 103.0
text = "Robot Radius"

[node name="GoButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 272.0
offset_top = -3.0
offset_right = 326.0
offset_bottom = 38.0
text = "Go"

[node name="DrawButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -93.0
offset_top = 47.0
offset_right = -30.0
offset_bottom = 88.0
text = "Draw Mode"
icon_alignment = 2

[node name="DebugCollisionCheck" type="CheckBox" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 798.0
offset_top = 48.0
offset_right = 1026.0
offset_bottom = 79.0
focus_mode = 0
disabled = true
text = "Show expanded obstacles"

[node name="ExitButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 932.0
offset_top = -2.0
offset_right = 1026.0
offset_bottom = 39.0
text = "Exit"

[node name="DrawHint1" type="Label" parent="."]
layout_mode = 0
offset_left = -85.0
offset_top = 607.0
offset_right = 84.0
offset_bottom = 630.0
text = "You can drag robot finish and obstacles"

[node name="DrawHint2" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 606.0
offset_right = 396.0
offset_bottom = 629.0
text = "Right click to add obstacle from points"
